--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -6,10 +6,12 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-2">
-            <h3 class="page-header">Order</h3>
+        <div class="col-lg-3">
+            <div class="page-header">
+                <h3>Order</h3>
+            </div>
             {% for item in ordered_items_list %}
-            <br>{{ item.item.name  }} ${{ item.item.price }} <a class="btn btn-xs btn-default" href="{% url 'remove_item' item.pk table_pk seat_number %}">Remove</a>
+            <br>Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }} <a class="btn btn-xs btn-default" href="{% url 'remove_item' item.pk table_pk seat_number %}">Remove</a>
             {% endfor %}
             <br><br>
             <b>Order Total: {{ ticket_total }}</b>
@@ -18,8 +20,14 @@
             <br><br>
             <a class="btn btn-lg btn-danger" href="{% url 'cancel_order' table_pk %}">Cancel</a>
         </div>
-        <div class="col-lg-9">
-            <h1 class="page-header">Table {{ table_number }} - Seat {{ seat_number }}</h1>
+        <div class="col-lg-8">
+            <div class="page-header">
+                <h3>Table {{ table_number }} - Seat {{ seat_number }}</h3>
+                {% for seat in working_seats %}
+                    <a class="btn btn-sm btn-default" href="{% url 'order_create_view' table_pk seat %}"> Seat {{ seat }}</a>
+                {% endfor %}
+                <a class="btn btn-sm btn-primary" href="{% url 'add_seat' table_pk seat_number %}">Add Seat</a>
+            </div>
             <div class="row">
                 {% for menu in menus_list %}
                     {% for item in menu.item.all %}
