--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -19,7 +19,7 @@
             <h3>Your Tables</h3>
             <div class="list-group">
                 {% for table in bound_tables %}
-                    <a href="{% url 'order_create_view' table.pk 1 %}">
+                    <a href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
                         <button type="button" class="btn btn-danger btn-lg">
                             <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Current Table {{ table.number }}
                         </button>
