--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -24,11 +24,20 @@
             <div class="page-header">
                 <h3>Table {{ table_number }} - Seat {{ seat_number }}</h3>
                 {% for seat in working_seats %}
+                {% if seat_number == seat %}
+                    <a class="btn btn-sm btn-success" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
+                    {% else %}
                     <a class="btn btn-sm btn-default" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
+                {% endif %}
+
                 {% endfor %}
                 <a class="btn btn-sm btn-primary" href="{% url 'add_seat' table_pk last_seat menu_pk %}">Add Seat</a>
                 {% for menu in menus_list %}
+                    {% if menu == current_menu %}
                     <a class="btn btn-warning btn-sm pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
+                    {% else %}
+                    <a class="btn btn-default btn-sm pull-right" href="{% url 'order_create_view' table_pk 1 menu.pk %}">{{ menu.name }}</a>
+                    {% endif %}
                 {% endfor %}
             </div>
             <div class="row">
