--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -31,86 +31,10 @@
     </head>
 
     <body>
-        <div id='wrapper'>
-            <!-- Navigation -->
-            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="{% url 'index' %}">{{ user.userprofile.workplace }} Home</a>
-                </div>
-                <!-- /.navbar-header -->
-
-                <ul class="nav navbar-top-links navbar-right">
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                        </a>
-                        <ul class="dropdown-menu dropdown-user">
-                            {% if user.is_authenticated %}
-                            <li><a href="#">Currently Logged In As {{ user.username }}</a></li>
-                            <li><a href="{% url 'logout' %}"><i class="fa fa-user fa-fw"></i> Log Out</a></li>
-                            {% else %}
-                            <li><a href="{% url 'login' %}"><i class="fa fa-user fa-fw"></i> Log In</a></li>
-                            <li><a href="{% url 'signup' %}">Sign Up</a></li>
-                            {% endif %}
-                        </ul>
-                        <!-- /.dropdown-user -->
-                    </li>
-                    <!-- /.dropdown -->
-                </ul>
-                <!-- /.navbar-top-links -->
-
-                <div class="navbar-default sidebar" role="navigation">
-                    <div class="sidebar-nav navbar-collapse">
-                        <ul class="nav" id="side-menu">
-                            <li>
-                                <a href="{% url 'index' %}"><i class="fa fa-dashboard fa-fw"></i>Home Link</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'server_home' %}"><i class="fa fa-bar-chart-o fa-fw"></i>Server View<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="">New Table</a>
-                                    </li>
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
-                            <li>
-                                <a href="{% url 'kitchen' %}"><i class="fa fa-table fa-fw"></i>Kitchen View</a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-wrench fa-fw"></i>Admin<span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level">
-                                    <li>
-                                        <a href="{% url 'add_menu_item' %}">Add Menu Items</a>
-                                    </li>
-                                    <li>
-                                        <a href="{% url 'create_menu' %}">Create New Menu</a>
-                                    </li>
-                                    <li>
-                                        <a href="{% url 'restaurant_update' %}">Update Restaurant Info</a>
-                                    </li>
-
-                                </ul>
-                                <!-- /.nav-second-level -->
-                            </li>
-                        </ul>
-                    </div>
-                    <!-- /.sidebar-collapse -->
-                </div>
-                <!-- /.navbar-static-side -->
-            </nav>
-        </div>
-<div id="page-wrapper">
-
+        {% block navbar %}
+        {% endblock %}
         {% block content %}
         {% endblock %}
-    </div>
 
         <!-- jQuery -->
         <script src="{% static 'bower_components/jquery/dist/jquery.min.js' %}"></script>
