--- a/server/templates/server/order_form.html
+++ b/server/templates/server/order_form.html
@@ -1,18 +1,24 @@
 {% extends 'base.html' %}
-
 {% load staticfiles %}
+
+{% block navbar %}
+    {% include 'server_navbar_include.html' %}
+{% endblock %}
 
 {% block content %}
 <div class="container">
 
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-sm-3">
             <div class="page-header">
                 <h3>Order</h3>
             </div>
+            <ul class="list-group">
+
             {% for item in ordered_items_list %}
-            <br>Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }} <a class="btn btn-xs btn-default" href="{% url 'remove_item' item.pk table_pk seat_number current_menu.pk %}">Remove</a>
+            <li class="list-group-item">Seat {{ item.seat_number }} {{ item.item.name  }} ${{ item.item.price }} <a class="btn btn-xs btn-default pull-right" href="{% url 'remove_item' item.pk table_pk seat_number current_menu.pk %}">Remove</a></li>
             {% endfor %}
+            </ul>
             <br><br>
             <b>Order Total: {{ ticket_total }}</b>
             <br><br>
@@ -20,9 +26,9 @@
             <br><br>
             <a class="btn btn-lg btn-danger" href="{% url 'cancel_order' table_pk %}">Cancel</a>
         </div>
-        <div class="col-lg-8">
+        <div class="col-xs-8">
             <div class="page-header">
-                <h3>Table {{ table_number }} - Seat {{ seat_number }}</h3>
+                <h3>Table {{ table_number }} - <span class="label label-default">Seat {{ seat_number }}</span></h3>
                 {% for seat in working_seats %}
                 {% if seat_number == seat %}
                     <a class="btn btn-sm btn-success" href="{% url 'order_create_view' table_pk seat menu_pk %}"> Seat {{ seat }}</a>
@@ -42,9 +48,9 @@
             </div>
             <div class="row">
                     {% for item in current_menu.item.all %}
-                        <div class="col-md-2">
-                            <a href="{% url 'add_item' table_pk item.pk seat_number menu_pk %}">
-                                <img src="{{ item.photo.url }}" alt="photo" height=50/><br>
+                        <div class="col-xs-6 col-md-3">
+                            <a href="{% url 'add_item' table_pk item.pk seat_number menu_pk %}" class="thumbnail">
+                                <img src="{{ item.photo.url }}" alt="photo" /><br>
                             {{ item.name }}
                             </a>
                         </div>
