working menuitem update view

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -28,6 +28,8 @@
         <link href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
         <title>Server Buddy</title>
+        {% block head %}
+        {% endblock %}
     </head>
 
     <body>
