--- a/server/templates/server/table_list.html
+++ b/server/templates/server/table_list.html
@@ -1,4 +1,13 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+
+{% block head %}
+    <meta http-equiv="refresh" content="15">
+{% endblock %}
+
+{% block navbar %}
+{% include 'kitchen_navbar_include.html' %}
+{% endblock %}
 
 {% block content %}
 <div class="row">
