--- a/server/templates/server/menuitem_form.html
+++ b/server/templates/server/menuitem_form.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}
 
+{% block navbar %}
+{% include 'navbar_include.html' %}
+{% endblock %}
+
 {% block content %}
-<br><br>
-<div class="row">
-    <div class="col-xs-6">
-        <form class="" action="" method="post" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="submit" value="Submit">
-        </form>
+<div id="page-wrapper">
+    <div class="page-header">
+        <h3>Add Menu Item</h3>
+    </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <div class="form-group">
+                <form class="" action="" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <input type="submit" name="submit" value="Submit" class="btn btn-success btn-lg">
+                </form>
+            </div>
+        </div>
 
     </div>
-
 </div>
+
 {% endblock %}
