finished styling both menu and menuitem forms

--- a/server/templates/navbar_include.html
+++ b/server/templates/navbar_include.html
@@ -5,7 +5,7 @@
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
+                <span class="icon-bar">AAAAAAAAAAAA</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
@@ -55,7 +55,7 @@
                         <a href="#"><i class="fa fa-wrench fa-fw"></i>Admin<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="{% url 'add_menu_item' %}">Add Menu Items</a>
+                                <a href="{% url 'add_menu_item' %}">Add Menu Item</a>
                             </li>
                             <li>
                                 <a href="{% url 'create_menu' %}">Create New Menu</a>
@@ -63,7 +63,6 @@
                             <li>
                                 <a href="{% url 'restaurant_update' %}">Update Restaurant Info</a>
                             </li>
-
                         </ul>
                         <!-- /.nav-second-level -->
                     </li>
