--- a/server/templates/server/menuitem_form.html
+++ b/server/templates/server/menuitem_form.html
@@ -6,9 +6,12 @@
 
 {% block content %}
 <div id="page-wrapper">
-    <div class="page-header">
-        <h3>Add Menu Item</h3>
+    <div class="row">
+        <div class="page-header">
+            <h3>Add or Update Menu Item</h3>
+        </div>
     </div>
+
     <div class="row">
         <div class="col-xs-6">
             <div class="form-group">
