--- a/server/templates/server/employee_create_form.html
+++ b/server/templates/server/employee_create_form.html
@@ -16,7 +16,7 @@
 
             <div class="login-panel panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Add New Server For {{ user.userprofile.workplace }}</h3>
+                    <h3 class="panel-title">Add New {{ user_type }} Employee For {{ user.userprofile.workplace }}</h3>
                 </div>
                 <div class="panel-body">
                     <form role="form" action="" method="post">
@@ -34,10 +34,6 @@
                             <div class="form-group">
                                 <input class="form-control" id="id_password2" name="password2" placeholder="Repeat Password" type="password">
                                 {{ form.password2.errors }}
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" id="id_name" name="name" placeholder="Server Name" type="text">
-                                {{ form.id_name.errors }}
                             </div>
                             <button type="submit" class="btn btn-lg btn-success btn-block">Add Server</button>
                             <a href="{% url 'index' %}" class="btn btn-lg btn-primary btn-block">Home</a>
