added login redirect based on employee status

--- a/server/templates/server/table_list.html
+++ b/server/templates/server/table_list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block navbar %}
-{% include 'kitchen_navbar_include.html' %}
+{% include 'employee_navbar_include.html' %}
 {% endblock %}
 
 {% block content %}
