--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block navbar %}
-{% include 'server_navbar_include.html' %}
+{% include 'employee_navbar_include.html' %}
 {% endblock %}
 {% block content %}
 <div class="container">
