added django stdimage

--- a/server/templates/employee_navbar_include.html
+++ b/server/templates/employee_navbar_include.html
@@ -2,5 +2,9 @@
     <ul class="nav nav-pills">
         <li role="presentation"><a href="#">Logged In As {{ user }}</a></li>
         <li role="presentation"><a href="{% url 'logout' %}">Log Out</a></li>
+        <li role="presentation"><a href="{% url 'kitchen' %}">Kitchen</a></li>
+        <li role="presentation"><a href="{% url 'index' %}">Index</a></li>
+        <li role="presentation"><a href="{% url 'server_home' %}">server_home</a></li>
+
     </ul>
 </div>
