cleaned up kitchen view

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -27,7 +27,7 @@
         <!-- Custom Fonts -->
         <link href="{% static 'bower_components/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
 
-        <title>Server Buddy</title>
+        <title>Restaurant</title>
         {% block head %}
         {% endblock %}
     </head>
