--- a/server/templates/server/table_list.html
+++ b/server/templates/server/table_list.html
@@ -10,61 +10,57 @@
 {% endblock %}
 
 {% block content %}
-<div class="row">
-    <a class="btn btn-lg btn-default pull-right" href="{% url 'archive' 1 1 %}">Clear All Fulfilled</a>
+<div class="container">
+    <ul class="list-group">
+            <div class="row">
+                <div class="col-sm-12">
+                    <a class="btn btn-lg btn-default pull-right" href="{% url 'archive' 1 1 %}">Clear All Fulfilled</a>
+                    <h3>Current Orders</h3>
+
+                </div>
+            </div>
+                {% for table in table_list %}
+                    {% if not table.fulfilled %}
+                        <li class="list-group-item list-group-item-success">
+                            Server: {{ table.server.user }}<br>
+                            <a href="{% url 'table_fulfilled' table.pk %}">
+                                <button type="button" class="btn btn-success btn-lg pull-right">
+                                    <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Mark Table Fulfilled
+                                </button>
+                            </a>
+                            Table: {{ table.number }}
+                            <br>Order Sent: {{ table.started }}
+                            <br>Items:
+                            {% for item in table.ordereditem_set.all %}
+                            {% if not item.canceled %}
+                            <br><b>
+                                {{ item.item.name }}
+                            </b>
+                                <br>
+                                Seat Number {{ item.seat_number }}:
+                                <br>
+                                Special Instructions{{ item.special_instructions }}
+                    {% endif %}
+                {% endfor %}
+                </li>
+            {% else %}
+                <li class="list-group-item list-group-item-warning">
+                        <a class="btn btn-sm btn-warning pull-right"href="{% url 'archive' table.pk 0 %}">Clear</a>
+                        Server: {{ order.server }}
+                        Table: {{ table.number }}<br>
+                        Seat Number: {{ table.started }}<br>
+                        Items:
+                        {% for order in table.order_set.all %}
+                        <br><b>
+                            Seat Number {{ order.seat_number }}:
+                            {% for item in order.items.all %}
+                            <br>
+                            {{ item.name }}
+                            {% endfor %}
+                        </b>{% endfor %}
+                </li>
+            {% endif %}
+        {% endfor %}
+    </ul>
 </div>
-<ul class="list-group">
-    {% for table in table_list %}
-
-        {% if not table.fulfilled %}
-            <li class="list-group-item"><p class='bg-success'>
-
-            Server: {{ table.server.user }}<br>
-
-              <a href="{% url 'table_fulfilled' table.pk %}">
-                  <button type="button" class="btn btn-success btn-lg pull-right">
-                      <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Mark Table Fulfilled
-                  </button>
-              </a>
-              Table: {{ table.number }}<br>
-              Order Sent: {{ table.started }}<br>
-              Items:
-              {% for item in table.ordereditem_set.all %}
-              {% if not item.canceled %}
-
-              <br><b>
-                  {{ item.item.name }}
-              </b>
-                  <br>
-                  Seat Number {{ item.seat_number }}:
-                  <br>
-                  Special Instructions{{ item.special_instructions }}
-                  {% endif %}
-              {% endfor %}
-          </p></li>
-        {% else %}
-            <li class="list-group-item ">
-                <p class="bg-warning">
-                    <a class="btn btn-sm btn-warning pull-right"href="{% url 'archive' table.pk 0 %}">Clear</a>
-                    Server: {{ order.server }}
-                    Table: {{ table.number }}<br>
-                    Seat Number: {{ table.started }}<br>
-                    Items:
-                    {% for order in table.order_set.all %}
-                    <br><b>
-                        Seat Number {{ order.seat_number }}:
-                        {% for item in order.items.all %}
-                        <br>
-                        {{ item.name }}
-                        {% endfor %}
-                    </b>{% endfor %}
-                </p>
-            </li>
-
-        {% endif %}
-    {% endfor %}
-</ul>
-
-
-
 {% endblock %}
