--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -22,11 +22,20 @@
             <h3>Your Tables</h3>
             <div class="list-group">
                 {% for table in bound_tables %}
+                    {% if table.sent %}
                     <a href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
                         <button type="button" class="btn btn-danger btn-lg">
                             <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Current Table {{ table.number }}
                         </button>
                     </a>
+                    {% else %}
+                    <a href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
+                        <button type="button" class="btn btn-warning btn-lg">
+                            <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Current Table {{ table.number }}
+                        </button>
+                    </a>
+
+                    {% endif %}
                 {% endfor %}
                 <br><br>
                 {% for table in unbound_tables %}
