--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -7,7 +7,6 @@
 
 {% block content %}
 <div id="page-wrapper">
-
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">Welcome {{ user.userprofile.name }}</h1>
@@ -50,15 +49,27 @@
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
                     </div>
-
                 </a>
-
             </div>
         </div>
 
         <div class="col-md-4">
-            <h3>Sales</h3>
         </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4>Menus</h4>
+                </div>
+                <div class="panel-body">
+                    {% for menu in menus %}
+                        <a href="{% url 'update_menu' menu.pk %}">Update {{ menu.name }}</a><br>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
