--- a/server/templates/server_home.html
+++ b/server/templates/server_home.html
@@ -23,33 +23,21 @@
             <div class="list-group">
                 {% for table in bound_tables %}
                     {% if table.sent %}
-                    <a href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
-                        <button type="button" class="btn btn-danger btn-lg">
+                    <a class="btn btn-danger btn-lg" href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
                             <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Current Table {{ table.number }}
-                        </button>
                     </a>
                     {% else %}
-                    <a href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
-                        <button type="button" class="btn btn-warning btn-lg">
+                    <a class="btn btn-warning btn-lg" href="{% url 'order_create_view' table.pk 1 first_menu.pk %}">
                             <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Current Table {{ table.number }}
-                        </button>
                     </a>
 
                     {% endif %}
                 {% endfor %}
                 <br><br>
                 {% for table in unbound_tables %}
-                <a href="{% url 'start_table_view' table first_menu.pk %}">
-                    <button type="button" class="btn btn-default btn-lg">
+                <a class="btn btn-default btn-lg" href="{% url 'start_table_view' table first_menu.pk %}">
                         <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Start Table {{ table }}
-                    </button>
                 </a>
-                {% endfor %}
-
-                {% for order in order_list %}
-                    <a href="{% url 'order_detail' order.pk %}" class="list-group-item">Order {{ order }}</a>
-
-                {% empty %}
                 {% endfor %}
             </div>
         </div>
