--- a/server/templates/server/menu_detail.html
+++ b/server/templates/server/menu_detail.html
@@ -7,30 +7,31 @@
 {% block content %}
 <div id='page-wrapper'>
     <div class="row">
-        <div class="col-md-8">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                </div>
+        <div class="col-sm-12">
+                <h3>
+                    <a class="btn btn-primary btn-lg pull-right" href="{% url 'update_menu' object.pk %}">Update Menu</a>
+                    {{ object.restaurant }} - {{ object.name }} - Menu Details
+                </h3>
+                <br>
 
-                    <div class="panel panel-body">
+        </div>
 
-                        <br>
-                        {{ object.restaurant }}
-                        <br>
-                        {{ object.name }}
-                        <br>
-                        <a href="{% url 'update_menu' object.pk %}">Update Menu</a>
-                        <h3>Menu Items</h3>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
                         {% for item in object.item.all %}
-                            <br>
+                        <div class="col-xs-6 col-md-3">
                             <a href="{% url 'menu_item_detail' item.pk %}">
-                                <img class="img-circle" src="{{ item.photo.url }}" alt="image" height='50px' />
-                                {{ item.name }}, {{ item.description }}, {{ item.price }}
+                                <figure>
+                                    <img class="img-rounded" src="{{ item.photo.url }}" alt="image" height='100px' />
+                                    <figcaption>
+                                        <br>{{ item.name }}
+                                        <br>{{ item.price }}
+                                    </figcaption>
+                                </figure>
                             </a>
+                        </div>
                         {% endfor %}
-                        <br><br>
-                    </div>
-            </div>
         </div>
     </div>
 </div>
