--- a/server/templates/server/menu_form.html
+++ b/server/templates/server/menu_form.html
@@ -7,8 +7,8 @@
 {% block content %}
 <div id="page-wrapper">
     <div class="row">
-        <div class="page-header">
-            <h3>Create or Update Menu</h3>
+        <div class="col-sm-12">
+            <h3>Create or Update Menu</h3>            
         </div>
     </div>
 
